[package]
name = "blackboard"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
interfaces = {path = "../interfaces"}
env_logger = "0.11.6"
libc = "0.2.169"
log = "0.4.22"
once_cell = "1.20.2"
serde = { version = "1.0.215", features = ["derive"] }
serde_yml = "0.0.12"
lazy_static = "1.5.0"
serde_json = "1.0.135"


[dev-dependencies]
test-log = "*"
assert_float_eq = "1.1.4"
serial_test = "3.2.0"
rstest = "0.24.0"

