[package]
name = "loader"
version = "0.1.0"
edition = "2021"

[dependencies]
interfaces = {path = "../interfaces"}
serde = { version = "1.0.215", features = ["derive"] }
serde_yml = "0.0.12"
tokio = {"version" = "1.42.0", "features" = ["full"]}
env_logger = "0.11.6"
log = "0.4.22"
clap = { version = "4.5.23", features = ["derive"] }
libloading = "0.8.6"

[dev-dependencies]
serial_test = "3.2.0"
test-log = "0.2.16"
rstest = "0.24.0"
